tutorial cards overflow fix

--- a/include/css/tutorial.css
+++ b/include/css/tutorial.css
@@ -37,17 +37,16 @@
 
 #wrapper article div.tutorialMain {
   margin-top: 0.2em;
+  overflow: hidden;
 }
 
 #wrapper article div.tutorialMainHeader {
   text-align: left;
-  width: 100%;
   margin-bottom: 0.5em;
   margin-left: 0.8em;
 }
 
 #wrapper article div.tutorialMainContent {
-  width: 100%;
   display: block;
   margin: 0 auto;
 }
